hello-world-nginx-2.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-2
  template:
    metadata:
      labels:
        app: nginx-2
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-index-config-2
          mountPath: /usr/share/nginx/html
      volumes:
      - name: nginx-index-config-2
        configMap:
          name: nginx-config-2
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-2
spec:
  selector:
    app: nginx-2
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: 80
    nodePort: 30082
