http-routes.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: example-1
  annotations:
    konghq.com/strip-path: 'true'
spec:
  parentRefs:
  - name: kong-gateway
    namespace: kong
  hostnames:
  - worlds.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /world1
    backendRefs:
      - name: nginx-service
        port: 80
        kind: Service
  - matches:
    - path:
        type: PathPrefix
        value: /world2
    backendRefs:
      - name: nginx-service-2
        port: 80
        kind: Service
  - matches:
    - path:
        type: PathPrefix
        value: /world3
    backendRefs:
      - name: nginx-service-2
        port: 80
        kind: Service
